<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">
    <TextView
        android:layout_margin="16dp"
        android:text="@string/worddatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"/>
    <RadioGroup
        android:id="@+id/rgforword"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioButton
            android:id="@+id/cet"
            android:layout_marginTop="16dp"
            android:text="@string/cet"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/toefl"
            android:text="@string/toefl"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

</LinearLayout>
